--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -529,12 +529,12 @@ Die zu sortierende Folge liegt meist in einem Feld \verb@A[1@\ldots\verb@n]@ vor
 
 Nun stellt sich natürlich die Frage nach der Laufzeit des Algorithmus für eine Eingabe der Größe $n$.
 Dazu treffen wir erstmal folgende Festlegungen. Die Laufzeit wird im weiteren als Komplexität des Algorithmus bezeichnet.
-\bigskip
+
 
  \textbf {Definition:} $c_i$ sind die Kosten für die Ausführung der i-ten Zeile des Algorithmus.
 
  \textbf {Definition:} $t_j$ ist Anzahl der Ausführungen des Tests der while-Bedingung für A[j].
-\bigskip
+
 
 In der Tabelle wird die Anzahl der Ausführungen jeder Zeile des Pseudocodes angegeben. Daraus errechnen wir dann
 die Komplexität des Algorithmus, so erhalten wir eine Aussage über die Güte des Verfahrens.
@@ -663,7 +663,7 @@ Dabei soll gelten: $f(n)=o(g(n));0 < \alpha < \beta,0<a<b,1<A<B$,
 $\alpha,\beta,a, b, A, B \in \R$.
 
 Die Linie zwischen Formel Nummer neun und zehn repräsentiert die bereits erwähnte Cook'sche Linie.
-\bigskip
+
 
 \begin{table}[h]
 \begin{tabular}{c|cr}
@@ -749,7 +749,7 @@ $\left.
 {\textrm{\textup{b}}}_1<\ldots<{\textrm{\textup{b}}}_m
 \end{array}
 \right\} {\textrm{\textup{c}}}_1<\ldots<{\textrm{\textup{c}}}_{2m}$
-\bigskip
+
 
 Die beiden Folgen werden also zu einer in sich sortierten Folge der doppelten Länge gemischt. Wie im folgenden zu sehen, werden immer genau
 zwei Elemente miteinander verglichen. Der Fall, daß zwei Teilfolgen unterschiedliche Länge haben, kann o.\,B.\,d.\,A. ignoriert werden.
@@ -773,7 +773,7 @@ zwei Elemente miteinander verglichen. Der Fall, daß zwei Teilfolgen unterschied
 \end{align*}
 
 An konkreten Zahlen läßt sich das vielleicht noch besser verfolgen, das Mischen im letzten Schritt aus dem Beispiel sähe wie folgt aus.
-\bigskip
+
 
 $1<4 \leadsto$ \raisebox{-2.5ex}{$\stackrel
 {\downarrow}
@@ -1027,7 +1027,7 @@ von 1995 den Kernsatz bewiesen, der ganze aber etwas kompliziertere Beweis ist i
 
 Eingabe ist eine sortierte Folge $\textup{a}_1 < \dots < \textup{a}_{\textup{n}}$ und ein Wert $b$. Ausgegeben werden soll
 $\iota \textup{i:a}_{\textup{i}} \leq b < \textup{a}_{\textup{i+1}}$, falls es existiert und ansonsten eine Fehlermeldung.
-\bigskip
+
 
 EXKURS: Binärer Suchbäum
 \begin{figure}[H]
@@ -1094,7 +1094,7 @@ Nun sei 128 die gedachte Zahl, die Fragen sähen dann so aus:
 10. Ist a$<$128? $\Rightarrow$ 128$\leq$a$<$129 $\Rightarrow$ a=128 
 
 Bei einer Million Zahlen reichen übrigens 20 Fragen aus!
-\bigskip
+
 
 % 
 % Annette Eisenbraun
@@ -1107,7 +1107,7 @@ $\vert$   &                 &         & $\gets$               & $\vert$ $\to$   
 $\vert$   & $\gets$ & $\vert$ $\to$ & & $\vert$\\
 &         & $\vert$ $\gets$ & $\vert$ $\to$ & $\vert$
 \end{tabular}
-\bigskip
+
 
 Wie sieht nun die Einordung der binären Suche in das Mastertheorem aus?
 Mit a = 1 und b = 2 gilt $\log_ba = 0$, also $\Theta\left(\textup{n}^{\log_ba}\right)=\Theta(1)$ und der zweite Fall kommt zur Anwendung.
@@ -1201,7 +1201,7 @@ daher mindestens n! Blätter. Der Beweis dafür stammt fast unverändert aus \ci
 Im Regelfall hat ein Entscheidungsbaum allerdings mehr 
 als $n!$ Blätter. Es gibt auch Knoten, die die leere Menge enthalten, oder Knoten, die nie erreicht werden können
 (z.~B. Knoten $\mathcal{W}$).
-\bigskip
+
 
 	
 Beispiele für den Baum aus Abbildung~\ref{271003c}:
@@ -1249,7 +1249,7 @@ Worst-case-Fall im Sortieren hier ist ein Ablaufen des Baumes von der Wurzel bis
 $ a_i < a_j \leftrightarrow a_j - a_i > 0
 \leftrightarrow \exists  d > 0 : a_j - a_i = d
 \leftrightarrow \exists   d > 0 : a_j - a_i - d = 0 $ 
-\bigskip
+
 
 Von Interesse ist, ob $ g(x_1 , \dots , x_n) < 0 $, wobei $ g(x_1 , \dots , x_n) = c_1 x_1 + \dots + c_n x_n + d $ mit
 $ c_1, \dots , c_n, d $ als Konstanten und $ x_1, \dots, x_n  $ als Variablen.
@@ -1300,7 +1300,7 @@ des Entscheidungsbaumes von $\log (card(\M))=\log m$ ist. Nun sei $b$ ein Blatt 
   ja / & & $ \backslash $ nein\\
   $ g(x_1, \dots, x_n) < 0 $ & & $ g(x_1, \dots x_n) \geq 0 $
   \end{tabular}
-\bigskip
+
   
 Nach Definition des linearen Modells sind diese Mengen $E(b)$ jeweils Durchschnitt von offenen und abgeschlossenen affinen Teilräumen
 \begin{gather*}
@@ -1384,7 +1384,7 @@ $m = 1:$ trivial
 
 $m \geq 2:$ Dann spaltet sich der Baum in maximal zwei Bäume auf, deren Pfadlängen m$_1$ und m$_2$ um eins geringer sind, als die
 von m. Die neuen Längen werden mit t$_{1,1}$ \ldots t$_{1,m_1}$ und t$_{2,1}$ \ldots t$_{2,m_2}$ bezeichnet.
-\bigskip
+
 
 Nach Voraussetzung gilt:
 \begin{gather*}
@@ -1587,7 +1587,7 @@ T(n)=2n  \ln n \approx 1,38 n   \log n
 \end{definition}
 
  Sei $A=(9,-5,2,-7,6,0,1)$, dann ist $Rang(1:A)\coloneqq 4$ (4 Elemente von $A$ sind $\leq 1$)
-\bigskip
+
 
 Sei nun $A$ sortiert, also $A_{sortiert}=(a_{\pi(1)}, ... , a_{\pi(n)})$, dann gilt für das Element $c$ mit $Rang(c:A)=k$ für $1\leq k
 \leq n$, daß $c=a_{\pi(k)}$, das heißt:
@@ -1652,7 +1652,7 @@ $A\coloneqq (a_{1}, ... , a_{n})$ erhält und unter der Bedingung $1\leq k\leq n
  zu Schritt 4: $\OO(n)$
 
  zu Schritt 5: $T(\frac{n}{Q})$
- \bigskip
+ 
  
 Seien die Mediane $m_{j}$ aller Teilfolgen sortiert. Dann ist $m$, der Median der Mediane, der Median dieser Folge. 
 Wieviele Elemente aller Teilfolgen sind größer oder gleich $m$?
@@ -1739,9 +1739,8 @@ Anschaulicher ist vielleicht die Vorstellung als Binärbaum
 	\label{101103a}
 \end{figure}
 Das korrespondierende Array wäre A=(8,7,5,3,1).
-\bigskip
 
-Um auf den Vater, den linken oder den rechten Sohn eines Knotens i zuzugreifen, genügen die folgenden einfachen Berechnungen:
+Um auf den Vater, den linken oder den rechten Sohn eines Knotens $i$ zuzugreifen, genügen die folgenden einfachen Berechnungen:
 
 \begin{tabular}{l|l}
 Ziel & Berechnung\\
