Leerzeichen vor \forall, \hfills entfernt.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2907 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -585,12 +585,11 @@ Ausnahmen, gleichbedeutend mit $\exists n_0 \in \N\colon  \forall n\geq n_0$
   \OO(g(n)) &\coloneqq \{ f(n) | \exists c_2 > 0, n_0 \in \N\
   \forall_n^\infty\colon  0\leq f(n)\leq c_2 g(n)\}\\
   \Omega(g(n)) &\coloneqq \{ f(n) | \exists{}c_1 > 0, n_0
-  \in\N\forall_n^\infty\colon  0\leq c_1 g(n)\leq f(n) 
+  \in\N\ \forall_n^\infty\colon  0\leq c_1 g(n)\leq f(n) 
     \} \\
-  \Theta(g(n)) &\coloneqq \{ f(n) | \exists c_1, c_2 > 0, n_0 \in \N\forall_n^\infty\colon  c_1 g(n)\leq f(n)\leq c_2 g(n)\} =
-    \hfill \OO(g(n)) \cap \Omega(g(n))\\
-o(g(n)) &\coloneqq \{ f(n) | \exists c_2 > 0, n_0 \in \N\forall_n^\infty\colon  0\leq f(n)< c_2 g(n)\}\\
-\omega(g(n)) &\coloneqq \{ f(n) | \exists{}c_1 > 0, n_0 \in  \N\forall_n^\infty\colon  0\leq c_1 g(n)< f(n) 
+  \Theta(g(n)) &\coloneqq \{ f(n) | \exists c_1, c_2 > 0, n_0 \in \N\ \forall_n^\infty\colon  c_1 g(n)\leq f(n)\leq c_2 g(n)\} = \OO(g(n)) \cap \Omega(g(n))\\
+o(g(n)) &\coloneqq \{ f(n) | \exists c_2 > 0, n_0 \in \N\ \forall_n^\infty\colon  0\leq f(n)< c_2 g(n)\}\\
+\omega(g(n)) &\coloneqq \{ f(n) | \exists{}c_1 > 0, n_0 \in  \N\ \forall_n^\infty\colon  0\leq c_1 g(n)< f(n) 
     \}
 \end{align*} 
 
@@ -1242,7 +1241,6 @@ für $ n \geq 8\textup{ist}\log n \geq 3 \leftrightarrow \frac{n}{6} \log n \geq
 Worst-case-Fall im Sortieren hier ist ein Ablaufen des Baumes von der Wurzel bis zu einem Blatt und dies geht bei einem Baum der Höhe $n
 \log n$ in $\OO(n \log n)$~Zeit.
 \end{beweis}
-\hfill q.~e.~d. 
 
 \section{Verschärfung des Hauptsatzes 1. "`Lineares Modell"'}
 
@@ -1327,8 +1325,6 @@ für eine bestimmte Teilmenge $\B$ aller Blätter des Entscheidungsbaumes. Weil 
 diese Vereinigung höchstens $\vert\B\vert$ viele Zusammenhangskomponenten haben. Die Anzahl aller Blätter des
 Entscheidungsbaumes kann nicht kleiner sein als $\vert\B\vert$, sie beträgt also mindestens $m$.
 
-\hfill q.~e.~d. 
-
 Die Komplexität des Elementtests ist also $ \Omega (\log m) $	
   \begin{satz}
   Die Komplexität der $\varepsilon$-closeness ist $ \Omega (n \log n) $.
@@ -1360,8 +1356,6 @@ $ \rightarrow $ dann exisitiert für $\varepsilon$-closeness ein Verfahren von g
 $ \rightarrow $ Widerspruch zur Voraussetzung $ \rightarrow $ Behauptung
 		
 (relativer Komplexitätsbeweis)
-
-\hfill q.~e.~d.
 \end{beweis}
 
 
@@ -1401,7 +1395,6 @@ Für T folgt also:
 \sum_{i=1}^{m_1,  m_2} 2^{-t_{j}}=2^{-1}\left(\sum_{i=1}^{m_{1}} 2^{-t_{1i}}+\sum_{i=1}^{m_{2}} 2^{-t_{2i}}\right)
 \leq 2^{-1}(1+1)=1
 \end{gather*}
-\hfill  q.e.d
 
 Hilfssatz:
 \begin{gather*}
@@ -1421,7 +1414,6 @@ Beweis:
 \[
 \textup{Also gilt für die Pfadlänge:}\log m \leq\frac{1}{m}  \sum_{i=1}^{m}t_i
 \]
-\hfill q.e.d.
 
 \begin{satz}
 Hauptsatz über das Sortieren
@@ -1444,7 +1436,6 @@ Falls $m>n!$, dann ist aber $\frac{1}{m} < \frac{1}{n!}$.
 
 Widerspruch zur Voraussetzung (untere Schranke) $\Rightarrow (m \geq n! \wedge \lnot (m>n!)) \rightarrow m=n!$
 \end{beweis}
-\hfill q.e.d.
 
 \section{\textsc{Quicksort}}
 Bei \textsc{Quicksort} handelt es sich ebenfalls um ein Teile-und-Hersche-Verfahren.
@@ -1564,8 +1555,7 @@ Einsetzen der Rekurrenz führt zu:
 T(n)=2n  \ln n \approx 1,38 n   \log n
 \end{gather*}
 \end{beweis}
-\hfill q.e.d.
-%
+
 % Susanne Gernandt
  \section{Auswählen (Sortieren)}
  Wie in vorangegangenen Vorlesungen besprochen wurde, braucht \textsc{QUICKSORT} bestenfalls $\OO(n \log n)$ Zeit und im
@@ -1617,32 +1607,28 @@ $A\coloneqq (a_{1}, ... , a_{n})$ erhält und unter der Bedingung $1\leq k\leq n
 
  \subsection{Algorithmus \texorpdfstring{SELECT$(A^{n},k)$}{SELECT (An,k)}}
  \addcontentsline{alg}{Algorithmus}{\textsc{Selektion}($A^n,  k$)}
- Wähle beliebige feste Ganzzahl $Q$ (z.B. 5)
- \begin{description}
-  \item[Schritt 1:] 
-  
-  If $\left|A\right|\leq Q$ Then sortiere $A$ \hfill(z.B. mit Bubblesort)
-
+ Wähle beliebige feste Ganzzahl $Q$ (z.B. 5)\todo{In Algorithmus ändern.}
+ \begin{enumerate}[Schr{i}tt~1:]
+  \item If $|A|\leq Q$ Then sortiere $A$ (z.\,B. mit Bubblesort)
   \hspace{2cm}Ausgabe des k-ten Elementes \hfill(da Anzahl konstant: $\OO(1)$)
-
   \hspace{1cm}Else Zerlege $A$ in $\frac{\left|A\right|}{Q}$ Teilfolgen der maximalen Länge Q
-  \item[Schritt 2:] Sortiere jede Teilfolge und bestimme den Median $m_{i}$ \hfill(dauert $\OO(n)$ Zeit)
-  \item[Schritt 3:] $SELECT(\{m_{1}, m_{2}, ... , m_{\frac{\left|A\right|}{Q}}\},\frac{\left|A\right|}{2Q})$, Ausgabe m
-  \item[Schritt 4:] Definition von drei Mengen:
+  \item Sortiere jede Teilfolge und bestimme den Median $m_{i}$ \hfill(dauert $\OO(n)$ Zeit)
+  \item $SELECT(\{m_{1}, m_{2}, ... , m_{\frac{\left|A\right|}{Q}}\},\frac{\left|A\right|}{2Q})$, Ausgabe m
+  \item Definition von drei Mengen:
 
   $A_{1}\coloneqq \left\{x\in A|x<m\right\}$
 
   $A_{2}\coloneqq \left\{x\in A|x=m\right\}$
 
   $A_{3}\coloneqq \left\{x\in A|x>m\right\}$
-  \item[Schritt 5:] If $\left|A_{1}\right|\geq k$ Then $SELECT (A_{1},k)$
+  \item If $|A_{1}|\geq k$ Then $SELECT (A_{1},k)$
 
   \hspace{1cm}Elseif $\left|A_{1}\right|+\left|A_{2}\right|\geq k$ Then Output m
 
   \hspace{1cm}Else $SELECT (A_{3},k-(\left|A_{1}\right|+\left|A_{2}\right|))$
- \end{description}
+ \end{enumerate}
  
-  \subsubsection{Zeitanalyse:}
+ \subsubsection{Zeitanalyse:}
  \hspace{4mm}zu Schritt 1: $max\{\OO(1),\OO(n)\}$
 
  zu Schritt 2: $\OO(1)$ für jedes Sortieren der $\OO(n)$ Teilfolgen
@@ -1784,8 +1770,6 @@ Nun bezeichne $K(v$) die Anzahl der Knoten im Baum mit der Wurzel $v$. Dann soll
 $\frac{K(j)}{K(i)} \leq \frac{2}{3}$.
 Nach Voraussetzung gilt $K(j)=2^l-1$ und $K(i)=2^l-1+2^{l-1}-1+1=3 \cdot 2^{l-1}-1$, es folgt
 \[\frac{K(j)}{K(i)}= \frac{2^l-1}{3\cdot 2^{l-1}-1} \leq \frac{2^l}{3 \cdot 2^{l-1}}= \frac{2}{3}\]
-
-\hfill q.e.d.
 \end{beweis}
 
 \begin{satz}
@@ -2712,13 +2696,14 @@ Dann gibt es jeweils für den rechten und den linken Teilbaum zwei Fälle. Dabei
     $1+2^{\Bh(x)-1}-1+2^{\Bh(x)-1}-1$  $=$ $2 \cdot 2^{\Bh(x)-1}+1-2 = 2^{\Bh(x)}-1$. Damit ist Satz \ref{schwarzhoehe} bewiesen. 
     
 Zum Beweis von Satz \ref{rshoehe} wird Eigenschaft 4 der Rot-Schwarz-Bäume ausgenutzt. Daraus folgt direkt, daß auf dem Weg von der Wurzel zu den Blättern,
-mindestens die Hälfte der Knoten schwarz ist. Sei $h$ wieder die Höhe des Baumes, dann gilt damit 
+mindestens die Hälfte der Knoten schwarz ist. Sei $h$ wieder die Höhe
+des Baumes, dann gilt damit\todo{Unten steht das Wort root im Mathesatz.}
 
-\begin{quote}       
-  $\Bh(root) \geq \frac{h}{2}\stackrel{\text{\autoref{schwarzhoehe}}}{\longrightarrow}$\\
-        $n \geq 2^{\Bh(root)}-1 \geq 2^{\frac{h}{2}}-1 \Rightarrow 2^{\frac{h}{2}}\leq n+1$ \hspace{2cm}$|$ $\log$\\
-        $\Leftrightarrow \frac{h}{2}\leq \log(n+1)$  \hfill q.e.d  
-\end{quote}
+\begin{align*}
+  \Bh(root) &\geq\frac{h}{2}\stackrel{\text{\autoref{schwarzhoehe}}}{\longrightarrow}\\
+  n &\geq 2^{\Bh(root)}-1 \geq 2^{\frac{h}{2}}-1 \Rightarrow 2^{\frac{h}{2}}\leq n+1\\
+  &\Leftrightarrow \frac{h}{2}\leq \log(n+1)
+\end{align*}
 \end{beweis} 
 
 % Mitschrift vom 26.11.03, Michael Preiß
