Optionen für hyperref und ntheorem eingebaut
git-svn-id: https://svn.lug-jena.de/uni-skripte@2908 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -13,7 +13,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{babel}
-\usepackage[draft=false,breaklinks]{hyperref}
+\usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 \usepackage{fancyvrb}
 \usepackage{amssymb}
 \usepackage{amsmath}
@@ -21,7 +21,8 @@
                                        % amsmath-Umgebungen z.\,B. $$...$$
 \usepackage{xcolor} 
 \usepackage{graphicx}
-\usepackage{ntheorem}
+\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
+                                                 % (satz, defini, bemerk)
 \usepackage{float}
 \usepackage{ecltree}
 \usepackage{epic}
