--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -78,7 +78,7 @@
 % Kapitels zurückgesetzt
 \newtheorem{satz}{Satz}[chapter]
 \newtheorem{bemerk}{Bemerkung}[chapter]
-\newtheorem{defini}{Definition}[chapter]
+\newtheorem{definition}{Definition}[chapter]
 \newtheorem{bsp}{Beispiel}[chapter]
 \newtheorem{festl}{Festlegung}[chapter]
 
@@ -98,7 +98,7 @@
 % \newtheorem definiert wurden
 \newcommand*{\satzautorefname}{Satz}
 \newcommand*{\bemerkautorefname}{Bemerkung}
-\newcommand*{\definiautorefname}{Definition}
+\newcommand*{\definitionautorefname}{Definition}
 \newcommand*{\bspautorefname}{Beispiel}
 \newcommand*{\festlautorefname}{Festlegung}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
