--- a/hecker-info3/skript.tex
+++ b/hecker-info3/skript.tex
@@ -1494,7 +1494,7 @@ Jetzt werden Pfadlängen um 1 größer, dann gilt für $t_{1i}$ (und analog für
 2^{(-t_{1i}+1)}=2^{-t_{1i}-1}=2^{-1} 2^{-t_{1i}}
 \end{gather*}
 
-Für T folgt also:
+Für $T$ folgt also:
 \begin{gather*}
 \sum_{i=1}^{m_1,  m_2} 2^{-t_{j}}=2^{-1}(\sum_{i=1}^{m_{1}} 2^{-t_{1i}}+\sum_{i=1}^{m_{2}} 2^{-t_{2i}})
 \leq 2^{-1}(1+1)=1
@@ -1506,40 +1506,38 @@ Hilfssatz:
 \end{gather*}
 
 Dabei gelten die selben Bezeichnungen wie oben.
+\begin{beweis}
+  \begin{align*}
+    \frac{1}{m} \sum_{i=1}^{m} 2^{-t_{i}} &\geq \sqrt[m]{\pi_{i=1}^{m}
+      2^{-t_{i}}}\\
+    &=\sqrt[m]{2^{-t_i} 2^{-t_2}\cdot \ldots \cdot 2^{-t_m}} =
+    \sqrt[m]{2^{-t_1-\dotsc -t_m}}= 2^{-\frac{1}{m}\sum_{i=1}^{m}t_i}
+  \end{align*}
+  Somit folgt, $m \leq 2^{\frac{1}{m} \sum_{i=1}^{m}t_i}$. Also gilt
+  für die Pfadlänge: $\log m \leq\frac{1}{m}\sum_{i=1}^{m} t_i$.
+\end{beweis}
 
-Beweis:
-\[
-\frac{1}{m}   \sum_{i=1}^{m}2^{-t_{i}} \geq \sqrt[m]{\pi_{i=1}^{m}2^{-t_{i}}}=\sqrt[m]{2^{-t_i}  2^{-t_2}\cdot \ldots \cdot 2^{-t_m}}
-=\sqrt[m]{2^{-t_1-  \ldots   -t_m}}= 2^{-\frac{1}{m}\sum_{i=1}^{m}t_i}
-\]
-\[
-\Rightarrow m \leq 2^{\frac{1}{m}  \sum_{i=1}^{m}t_i}
-\]
-\[
-\text{Also gilt für die Pfadlänge:}\log m \leq\frac{1}{m}  \sum_{i=1}^{m}t_i
-\]
+\begin{satz}[Hauptsatz über das Sortieren]
+  Das Sortieren auf der Basis von Schlüsselvergleichen kostet bei
+  Gleichwahrscheinlichkeit aller Permutationen der Eingabe $\theta
+  (n\log n)$ (mit den schnellstmöglichen Algorithmen).
+  \begin{beweis}
+    Annahme $m>n!$
+    \begin{gather*}
+      \Omega(n  \log n) \ni \log n!\leq\frac{1}{n!}  \sum_{i=1}^{m}t_i \leq\frac{1}{m}  \sum_{i=1}^{m}t_i
+    \end{gather*}
+    Da wir bereits die untere Schranke bewiesen haben, muß
+    $\frac{1}{m} \sum_{i=1}^{m}t_i \geq \frac{1}{n!}
+    \sum_{i=1}^{m}t_i$ gelten, also $\frac{1}{m} \geq \frac{1}{n!}$
+    und damit $m \geq n!$ sein.
 
-\begin{satz}
-Hauptsatz über das Sortieren
+    Falls $m>n!$, dann ist aber $\frac{1}{m} < \frac{1}{n!}$.
 
-Das Sortieren auf der Basis von Schlüsselvergleichen kostet bei Gleichwahrscheinlichkeit aller Permutationen der Eingabe
-$\theta (n\log n)$ (mit den schnellstmöglichen Algorithmen).
+    Widerspruch zur Voraussetzung (untere Schranke) $\Rightarrow (m
+    \geq n! \wedge \lnot (m>n!)) \rightarrow m=n!$
+\end{beweis}
 \end{satz}
 
-\begin{beweis}
-Annahme $m>n!$
-
-\begin{gather*}
-\Omega(n  \log n) \ni \log n!\leq\frac{1}{n!}  \sum_{i=1}^{m}t_i \leq\frac{1}{m}  \sum_{i=1}^{m}t_i
-\end{gather*}
-
-Da wir bereits die untere Schranke bewiesen haben, muß $\frac{1}{m}  \sum_{i=1}^{m}t_i \geq \frac{1}{n!}  \sum_{i=1}^{m}t_i$ gelten,
-also $\frac{1}{m} \geq \frac{1}{n!}$ und damit $m \geq n!$ sein.
-
-Falls $m>n!$, dann ist aber $\frac{1}{m} < \frac{1}{n!}$.
-
-Widerspruch zur Voraussetzung (untere Schranke) $\Rightarrow (m \geq n! \wedge \lnot (m>n!)) \rightarrow m=n!$
-\end{beweis}
 
 \section{\textsc{Quicksort}}
 Bei \textsc{Quicksort} handelt es sich ebenfalls um ein Teile-und-Hersche-Verfahren.
