--- a/erhard-komm-sys/skript.latex
+++ b/erhard-komm-sys/skript.latex
@@ -1,18 +1,59 @@
 %
 % Korrekturen und Verbesserungen bitte an joerg@alea.gnuu.de
 %
-\documentclass[draft]{scrreprt}
+% Einige zusätzliche Informationen für rubber
+%  rubber erkennt nicht, dass die Datei weg kann, daher sagen wir es ihm
+% rubber: clean $base.thm
+%  rubber soll nach Änderungen an der Datei nochmal bauen
+% rubber: watch $base.thm
+% rubber: index.tool      xindy
+% rubber: index.language  german-din
+%
+% scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
+% zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
+% unterschieden, und wir verwenden zwischen den Absätzen einen Abstand
+% von einer halben Zeile (halfparskip) und dafür keinen Absatzeinzug,
+% wobei die letzte Zeile eines Absatzes zu min. 1/4 leer ist.
+
+\RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
+                   % Befehle oder solche, die man nicht in LaTeX verwenden
+                   % soll -- l2tabu-Checker in LaTeX
+
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+                   % Trennmuster, diese korrigieren einige Fehler der alten
+                   % und bieten mehr Trennstellen
+
+\documentclass[ngerman,draft,parskip=half*,twoside]{scrreprt}
 
 \usepackage{units}
-\usepackage[draft=false]{hyperref}
+\usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 \usepackage[latin1]{inputenc}
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage[final]{graphicx}
 \usepackage{paralist}
-\usepackage{ngerman}
+\usepackage[ngerman]{babel}
 \usepackage{theorem}
+\usepackage{ellipsis}
 %\usepackage{capt-of}
+\usepackage{fixmath}     % ISO-konforme griech. Buchstaben
+\usepackage[euro]{isonums} % definiert Komma als Dezimaltrennzeichen
+
+\usepackage[amsmath,thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
+                                                 % (satz, defini, bemerk)
+\usepackage{xspace}      % wird weiter unten gebraucht
+\usepackage{slashbox}    % für schräge Striche links oben in der
+                         % Tabelle; s. texdoc slashbox
+
+\usepackage{paralist}    % besseres enumerate und itemize und neue
+                         % compactenum/compactitem; s. texdoc paralist
+
+\usepackage{svn}         % Zum Auswerten und ordentlichen Darstellen der
+                         % SVN-Schlüsselwörter (s. vor \begin{document})
+                         % dafür muss in SVN noch das Flag svn:keywords
+                         % auf "LastChangedRevision LastChangedDate"
+                         % gesetzt werden
+
 
 \theoremstyle{break}
 \theorembodyfont{\normalfont}
@@ -22,7 +63,7 @@
 
 \title{Kommunikationstechnik\\[1ex]
   \includegraphics[width=\linewidth]{logo}}
-\author{Prof. Dr. Werner Erhard}
+\author{Prof.\,Dr.\,Werner Erhard}
 \date{WS 2004/05}
 \publishers{Jörg Sommer}
 \maketitle
@@ -36,7 +77,7 @@
 
 Unter \emph{Kommunikation} versteht man einen Informationsfluß, der letztlich
 zum Austausch von Nachrichten und Informationen
-(siehe dazu Abschnitt~\ref{sec:nach-inf}) führt. Kommunikation gibt es:
+(siehe dazu \autoref{sec:nach-inf}) führt. Kommunikation gibt es:
 \begin{itemize}
  \item zwischen verschiedenen Organismen bzw. Maschinen untereinander,
  \item innerhalb von Organismen oder Maschinen,
@@ -108,7 +149,7 @@ Sprache, Gestik, Mimik, Motorik etc. abgegeben. Dabei entsteht ein
 Informationsfluß von ca. \unit[107]{bps}. Entsprechende Größenordnungen für die
 Aufnahme von Informationen zeigt die folgenden Tabelle: 
 \begin{tabular}{lrrc}
-  &  Rezeptoren &Informationsfluß in \unit{bps} &Tatsäschlich
+  &  Rezeptoren &Informationsfluß in \unit{bps} &Tatsächlich
      verarbeitete Inf.\\
   \hline
   Auge (Licht) & 2*$10^{8}$ & $10^{8}$ &\\
@@ -119,7 +160,7 @@ Haut (Wärme, Kälte) 	106 	-
 \end{tabular}
 \section{Kommunikationsmedien}
 
-Kommunikation ist m"oglich "uber r"aumliche und zeitliche Distanz. Man
+Kommunikation ist möglich über räumliche und zeitliche Distanz. Man
 unterscheidet dabei Individual- und Massenkommunikation:
 
 \begin{center}
@@ -129,7 +170,7 @@ unterscheidet dabei Individual- und Massenkommunikation:
     \hline
     Individuelle Komm.& Telefon (Welt: 1~Mrd.)& \parbox{3cm}{Bildtelefon,
        Telefax, Foto, Video}& \parbox{2cm}{Brief, Telefax, BTX}\\
-    Massenkomm.& Radio, Tontr"ager& Fernsehen, Kino& Buch, Zeitung
+    Massenkomm.& Radio, Tonträger& Fernsehen, Kino& Buch, Zeitung
   \end{tabular}
 \end{center}
 
@@ -141,7 +182,7 @@ Individualkommunikation zeigt die folgende Tabelle:
  \item video on demand: 10~Mbps -- 1~Gbps
  \item Menge von Daten:
   \begin{enumerate}
-   \item Kurzdialog: wenige 100~Bytes; eMails, Kontenautomat, Me"swerke
+   \item Kurzdialog: wenige 100~Bytes; eMails, Kontenautomat, Meßwerke
    \item Langdialog: 60~kB -- 1~MB; Datenbankrecherche
    \item Stapelverkehr: $>$1~MB, Downloads
   \end{enumerate}
@@ -149,130 +190,130 @@ Individualkommunikation zeigt die folgende Tabelle:
 
 \chapter{Aufgabenstellung und Klassifikation}
 
-Die Aufgabe eines Datenkommunikationssystems ist die "Ubermittlung
-("Ubertragung + Vermittlung) und teilweise auch die Verarbeitung von
-Datenstr"omen zwischen einzelnen Teilnehmern des Systems.
+Die Aufgabe eines Datenkommunikationssystems ist die Übermittlung
+(Übertragung + Vermittlung) und teilweise auch die Verarbeitung von
+Datenströmen zwischen einzelnen Teilnehmern des Systems.
 
-Beispiel f"ur die Verarbeitung: Aufbau einer Verbindung von Jena zum MIT
+Beispiel für die Verarbeitung: Aufbau einer Verbindung von Jena zum MIT
 
 \begin{center}
   \includegraphics[width=\linewidth]{jena-mit}
 \end{center}
 
-Die Qualit"at der Daten"ubermittlung h"angt ab von:
+Die Qualität der Datenübermittlung hängt ab von:
 \begin{enumerate}
  \item Kosten: Investitionskosten, laufende Kosten, Wartungskosten,
   Ersatzkosten
- \item Funktionalit"at: Anzahl/Art der Kommunikationsdienste (Schlagwort:
+ \item Funktionalität: Anzahl/Art der Kommunikationsdienste (Schlagwort:
   Multimedia)
- \item Verkehrsg"ute: Reibungsloser Ablauf des Informationsaustausch
+ \item Verkehrsgüte: Reibungsloser Ablauf des Informationsaustausch
   \begin{enumerate}
-   \item Durchsatz (Zahl der Auftr"age, die pro Zeiteinheit im
-    Mittel/Maximum ausgef"uhrt werden)
+   \item Durchsatz (Zahl der Aufträge, die pro Zeiteinheit im
+    Mittel/Maximum ausgeführt werden)
    \item Wartezeit (Zeit, die eine Anforderung im System bzw. pro Station
     warten muss)
    \item Verweil- oder Durchlaufzeit (Summe aller Warte-, Bearbeitungs-
-    und Transportzeiten im System f"ur einen bestimmten Auftrag)
+    und Transportzeiten im System für einen bestimmten Auftrag)
   \end{enumerate}
- \item "Ubertragungsg"ute
+ \item Übertragungsgüte
   \begin{enumerate}
    \item Bit-/Blockfehlerwahrscheinlichkeit (WK, dass ein Bit bzw. eine
-    Menge von Bits (Block) in der "Ubertragung gest"ort ist)
-   \item Effektive "Ubertragungszeit (Zeit, die notwendig ist, die
-    Nachricht korrekt zu "ubertragen)
+    Menge von Bits (Block) in der Übertragung gestört ist)
+   \item Effektive Übertragungszeit (Zeit, die notwendig ist, die
+    Nachricht korrekt zu übertragen)
   \end{enumerate}
- \item Zuverl"assigkeit (m"oglichst wenig Ausf"alle des Gesamtsystems
+ \item Zuverlässigkeit (möglichst wenig Ausfälle des Gesamtsystems
   oder von Komponenten)
   \begin{enumerate}
    \item Ausfallwahrscheinlichkeit (WK, dass das System bzw. die
-    Systemkomponente ausf"allt)
-   \item Verf"ugbarkeit $= \frac{MTBF}{MTBF+MTTR}$
+    Systemkomponente ausfällt)
+   \item Verfügbarkeit $= \frac{MTBF}{MTBF+MTTR}$
     
     MTBF: Mean timebetween failure, MTTR: Mean time to repair
   \end{enumerate}
  \item Robustheit
   \begin{enumerate}
-   \item "Uberlastungsf"ahigkeit
-   \item "Ubertragungssicherheit (Empfindlichkeit gegen Fehler)
+   \item Überlastungsfähigkeit
+   \item Übertragungssicherheit (Empfindlichkeit gegen Fehler)
    \item Ausfallsicherheit
   \end{enumerate}
- \item Erweiterbarkeit/Flexibilit"at (M"oglicheit der dynamischen
-  Anpassung des Netzes bei erh"ohten Verkehrsbed"urfnis oder ver"andertem
+ \item Erweiterbarkeit/Flexibilität (Möglicheit der dynamischen
+  Anpassung des Netzes bei erhöhten Verkehrsbedürfnis oder verändertem
   Verkehrscharakter)
  \item Benutzerfreundlichkeit
 \end{enumerate}
 
 \section{Technische Grundlagen}
-\subsection{ "Ubertragungswege}
+\subsection{Übertragungswege}
 
 \begin{description}
  \item[Kabelgebunden]
   \begin{itemize}
    \item Lichtwellenleiter (LWL): 10-100 $\mu m$
     \begin{description}
-     \item[Vorteil:] extrem St"orsicher, Abh"orischer, leicht zu
+     \item[Vorteil:] extrem Störsicher, Abhörischer, leicht zu
       verlegen, Datenraten bis GBit/Tbit
-     \item[Nachteil:] h"ohere Kabelkosten (als Kupferkabel), teure
+     \item[Nachteil:] höhere Kabelkosten (als Kupferkabel), teure
       Anschlusskosten
       \end{description}
    \item 2-Drahtleitung (twisted pair): Kupferkabel, Dicke im Millimeterbereich
     \begin{description}
      \item[Vorteil:] niedrige Kosten, oftmals bereits vorhanden, gut verlegbar
-     \item[Nachteil:] hohe St"orempfindlichkeit, Datenraten <
-      100~Mbit, nur einige 100~m, mit Verst"arkern 30~km Entfernung m"oglich
+     \item[Nachteil:] hohe Störempfindlichkeit, Datenraten <
+      100~Mbit, nur einige 100~m, mit Verstärkern 30~km Entfernung möglich
     \end{description}
    \item Koaxialkabel:
     \begin{description}
-     \item[Vorteil:] St"orsicherheit, Datenrate bis Gbit-Bereich, bei
-      100~Mbit bis 20~km Entfernung (ohne Verst"arker)
-     \item[Nachteil:] h"ohere Kosten (10-fache eines Kupferkabels),
+     \item[Vorteil:] Störsicherheit, Datenrate bis Gbit-Bereich, bei
+      100~Mbit bis 20~km Entfernung (ohne Verstärker)
+     \item[Nachteil:] höhere Kosten (10-fache eines Kupferkabels),
       Verlegung kompliziert, teure Anschlusstechnik
       \end{description}
   \end{itemize}
  \item[Kabellos]
   \begin{itemize}
-   \item Satelliten"ubertragung
+   \item Satellitenübertragung
     \begin{description}
-     \item[Vorteil:] Flexibilit"at, hohe Benutzerraten, Datenrate im
+     \item[Vorteil:] Flexibilität, hohe Benutzerraten, Datenrate im
       GBit/TBit-Bereich
      \item[Nachteil:] extrem hohe Kosten, Laufzeit nicht
-	vernachl"assigbar
+	vernachlässigbar
     \end{description}
    \item Laser
    \item Infrarot, Bluetooth (genehmigungsfrei)
     \begin{description}
      \item[Vorteil:] geringe Kosten (da Massenprodukt), flexibel
-     \item[Nachteil:] geringe Datenraten (z.B. Infrarot bis 5~MBit),
-      st"oranf"allig, extrem unsicher
+     \item[Nachteil:] geringe Datenraten (z.\,B. Infrarot bis 5~MBit),
+      störanfällig, extrem unsicher
     \end{description}
     \end{itemize}
 \end{description}
 
-\subsection{"Ubertragungsprinzen}
-Basisband"ubertragung
+\subsection{Übertragungsprinzen}
+Basisbandübertragung
 \begin{itemize}
- \item Frequenzband ist begrenzt $0-f_{max} < 5\,kHz$
- \item gleichm"a"sige "Ubertragungsqualit"at von niedrigen bis hohen
+ \item Frequenzband ist begrenzt $0-f_{max} < 5$\,kHz
+ \item gleichmäßige Übertragungsqualität von niedrigen bis hohen
   Frequenzen erforderlich
 \end{itemize}
 
-Tr"agerband"ubertragung
+Trägerbandübertragung
 \begin{itemize}
- \item gleichm"a"sige "Ubertragungsqualit"at im Bereich
+ \item gleichmäßige Übertragungsqualität im Bereich
   $f_{min}$--$f_{max}$ erforderlich, Frequenzmodulation mit
   $f_{2}=c\,f_{1}$, z.B. 3,75~MHz, 7,5~MHz
   
   notwendig: Modem (Modulator/Demodulator)
 \end{itemize}
 
-\section{Abstimmung von Sender und Empf"anger -- Synchronisation}
+\section{Abstimmung von Sender und Empfänger -- Synchronisation}
 \subsection{Asynchronbetrieb (Start-Stop-Betrieb)}
 \begin{itemize}
- \item zeitlich willk"urliche "Ubertragung der Signale
- \item Synchronisation zwischen Sender und Empf"anger nur f"ur die Dauer
+ \item zeitlich willkürliche Übertragung der Signale
+ \item Synchronisation zwischen Sender und Empfänger nur für die Dauer
   eines Zeitraums
   
-  Startbit, 5-8 Bits, Parit"atsbits, 1, 1$\frac12$ oder 2 Stopbits
+  Startbit, 5-8 Bits, Paritätsbits, 1, 1$\frac12$ oder 2 Stopbits
   
   Sendetakt | | |
   Empfangstakt um eine halbe Periode verschoben
@@ -284,8 +325,8 @@ Tr"agerband"ubertragung
 
 \subsection{Synchron-Betrieb}
 \begin{itemize}
- \item Zentraler Taktgeber notwendig $\rightarrow$ r"aumliche Begrenzung
- \item Synchronisation f"ur die gesamte Dauer der Kommunikation
+ \item Zentraler Taktgeber notwendig $\rightarrow$ räumliche Begrenzung
+ \item Synchronisation für die gesamte Dauer der Kommunikation
 \end{itemize}
 
 \begin{description}
@@ -293,8 +334,8 @@ Tr"agerband"ubertragung
  \item[Nachteil:] teuer
 \end{description}
 
-\subsection{Synchronisation "uber einen Datenblock}
-Vorraussetzung: Taktgeber bei Sender und Empf"anger laufen f"ur einen
+\subsection{Synchronisation über einen Datenblock}
+Vorraussetzung: Taktgeber bei Sender und Empfänger laufen für einen
 Datenblock gemeinsam
 
 SYN | STX | Daten | ETX | CRC (|SYN)
@@ -304,17 +345,17 @@ STX: Start of text -- Nachrichtenbeginn
 ETX: End of text -- Nachrichtenende
 CRC: Cyclic redanduncy check (Fehlerinformation)
 
-\chapter{Wirtschaftliche Ausnutzung von "Ubertragungskapazit"aten}
+\chapter{Wirtschaftliche Ausnutzung von Übertragungskapazitäten}
 
 \subsection{Frequenzmultiplex (Breitbandtechnik)}
-Die "Ubertragungsfrequenz $0--f_{max}$ wird aufgeteilt in $f_{min_{1}} --
+Die Übertragungsfrequenz $0--f_{max}$ wird aufgeteilt in $f_{min_{1}} --
 f_{max_{1}}, f_{min_{2}} -- f_{max_{2}}, f_{min_{3}} -- f_{max_{3}},
-\ldots$ (Die einzelnen Bereiche m"ussen disjunkt sein)
+\ldots$ (Die einzelnen Bereiche müssen disjunkt sein)
 
 \subsection{Zeitmultiplex}
-Die Eing"ange werden zyklisch abgetastet und 
+Die Eingänge werden zyklisch abgetastet und 
 
-Post: PCM 30 (puls code modulation; 30 = 30 Anschl"usse)
+Post: PCM 30 (puls code modulation; 30 = 30 Anschlüsse)
 
 zyklische Zuordnung
 STM - Synchronous Transfer Mode
@@ -325,12 +366,12 @@ Paketform: SYN Adresse, Daten, CRC, SYN
 Betriebsarten auf einer Verbindung:
 \begin{description}
  \item[Simplex-Betrieb:] A$\rightarrow$ B oder B $\rightarrow$ A (Sender
-  und Em"uf"anger sind f"ur die gesamte verbindung fest
+  und Empfänger sind für die gesamte verbindung fest
  \item[Halbduplex-Betrieb:] A$\rightarrow$ B oder B$\rightarrow$A,
-  wechselseitig, A und B tauschen die Rolle von Sender und Empf"anger
-  w"arend der Verbindung
+  wechselseitig, A und B tauschen die Rolle von Sender und Empfänger
+  während der Verbindung
  \item[Duplex-Betrieb:] A$\rightarrow$B und B$\rightarrow$ A,
-  gleichzeitig, A und B sind Sender und Empf"anger zugleich
+  gleichzeitig, A und B sind Sender und Empfänger zugleich
 \end{description}
 
 Klassifikation von Vermittlungssystemen
@@ -338,19 +379,19 @@ Klassifikation von Vermittlungssystemen
  \item[Entfernung zwischen den Stationen]\mbox{}\\
   
   \begin{tabular}{clll}
-    Entfernung& Wo? & "ubliche Bezeichnung & Fachbezeichnung\\\hline
+    Entfernung& Wo? & übliche Bezeichnung & Fachbezeichnung\\\hline
     --$10^{-2}\,m$& Chip& integrierter Bus& \parbox{3cm}{SAN (Small area
        network)}\\\hline
     --$10^{-1}\,m$& Platine& Leiterplattenbus& SAN\\\hline
     --$10^{0}\,m$& Multiprozessoren& Front-/Endbus& SAN\\\hline
-    --$10^{1}\,m$& B"uro/Labor& Labor-/Clusterbus& Fieldbus\\\hline
+    --$10^{1}\,m$& Büro/Labor& Labor-/Clusterbus& Fieldbus\\\hline
     --$10^{2}\,m$& Campus/Fabrik& Feldbus& Fieldbus\\\hline
-    --$10^{3}\,m$& Universit"at& lokales Netz& \parbox{3cm}{LAN (PBX --
+    --$10^{3}\,m$& Universität& lokales Netz& \parbox{3cm}{LAN (PBX --
        privat branch exchange)}\\\hline
     --$10^{4}\,m$& Stadtbereich& lokales Netz& LAN\\\hline
-    --$10^{5}\,m$& Land& \parbox{3.5cm}{DF"U-/Weitverkehrsnetz}& \parbox{3cm}{WAN (wide),
+    --$10^{5}\,m$& Land& \parbox{3.5cm}{DFÜ-/Weitverkehrsnetz}& \parbox{3cm}{WAN (wide),
        \\MAN (metropolitan)}\\\hline
-    $>10^{5}\,m$& Kontinent& \parbox{3cm}{Verbund von\\DF"U-Netzen} &
+    $>10^{5}\,m$& Kontinent& \parbox{3cm}{Verbund von\\DFÜ-Netzen} &
        \parbox{3cm}{TAN (terrestrial),\\SAN (satellite)}
   \end{tabular}
  \item Ort der Vermittlung
@@ -364,21 +405,21 @@ Klassifikation von Vermittlungssystemen
   switching)
 
   \begin{enumerate}
-   \item Vollst"andiges Durchschalten des gesamten Weges (End-zu-End-Verbindung)
-   \item "Ubertragung der Daten
+   \item Vollständiges Durchschalten des gesamten Weges (End-zu-End-Verbindung)
+   \item Übertragung der Daten
    \item Abbau der Verbindung
   \end{enumerate}
   
   Speichervermittlung (Teilstreckenvermittlung, Store and forward notwendig)
   \begin{enumerate}
    \item Aufbau einer \emph{virtuellen} Verbindung
-   \item Daten"ubertragung von Knoten zu Knoten
+   \item Datenübertragung von Knoten zu Knoten
    \item Zwischenspeichern im Knoten und Quittung
   \end{enumerate}
   
   Unterklassifikation:
   \begin{itemize}
-   \item Nachrichtenvermittlung (message switching) "Ubertragung der
+   \item Nachrichtenvermittlung (message switching) Übertragung der
     Nachricht in einem Block: H | Nachricht | T
    \item Paketvermittlung (packet switching)
     
@@ -393,26 +434,26 @@ Klassifikation von Vermittlungssystemen
 \section{Modularisierung (Dekomposition)}
 Zerlegung eines Systems in Teile, die diejenigen Komponenten enthalten,
 die in einem logischen Zesammenhang stehen. Die Verbindungstelle zwischen
-zwei Modulen bezeichnet man als \emph{Schnittstelle}, die Regeln f"ur den
-Informationsaustausch hei"sen \emph{Protokolle}.
+zwei Modulen bezeichnet man als \emph{Schnittstelle}, die Regeln für den
+Informationsaustausch heißen \emph{Protokolle}.
 
-Kriterien f"ur Modularisierung:
+Kriterien für Modularisierung:
 \begin{description}
- \item[Abgeschlossenheit] Jedes Modul "ubernimmt nur eine Teilaufgabe und
+ \item[Abgeschlossenheit] Jedes Modul übernimmt nur eine Teilaufgabe und
   diese Teilaufgabe wird nur von diesem Modul gemacht.
- \item[Handhabbarkeit] Die Gr"o"se des Moduls muss "uberschaubar sein
- \item[Pr"ufbarkeit] das korrekte Verhalten eines Moduls kann unter
-  Ber"ucksichtigung der Schnittstellen- und Protokollspezifikation
+ \item[Handhabbarkeit] Die Größe des Moduls muss überschaubar sein
+ \item[Prüfbarkeit] das korrekte Verhalten eines Moduls kann unter
+  Berücksichtigung der Schnittstellen- und Protokollspezifikation
   validiert bzw. verifiziert werden.
- \item[Geheimnisprinzip/Virtualit"at] Wichtig ist, was geleistet wird,
+ \item[Geheimnisprinzip/Virtualität] Wichtig ist, was geleistet wird,
   nicht wie es gleistet wird.
- \item[Gegenseitige Nichtbeeinflussung] "Anderungen in einem Modul
-  d"urfen sich nicht auf andere Module auswirken.
+ \item[Gegenseitige Nichtbeeinflussung] Änderungen in einem Modul
+  dürfen sich nicht auf andere Module auswirken.
 \end{description}
 
 \subsection{Schichtenmodell/ Hierarchiebildung}
 
-Festlegung einer Rangordnung f"ur einzelne Aufgaben oder Dienste und
+Festlegung einer Rangordnung für einzelne Aufgaben oder Dienste und
 Zusammenfassung und in einem Schichtenmodell. Die einzelnen
 Hierarchieebenen sind funktionell abgeschlossen. Dienste werden erbracht
 \begin{enumerate}
@@ -426,38 +467,38 @@ Hierarchieebenen sind funktionell abgeschlossen. Dienste werden erbracht
   \begin{tabular}{cll}
     Schicht\\
     7& Anwendungsschicht/ application layer& Dienste,
-       Anwendungsentst"utzung (ftp, rpc,\ldots)\\
+       Anwendungsentstützung (ftp, rpc,\ldots)\\
     6& Darstellungsschicht/ presentation layer& einheitliche
        Informationsdarstellung\\
     5& Kommunikations-Steuerschicht/ session layer & Organisation und
        Steuerung des Dialogs (Zugangskontrolle, Abrechnung)\\
-    4& transport layer& End-zu-End-Kontrolle zuverl"assiger und
+    4& transport layer& End-zu-End-Kontrolle zuverlässiger und
        effizienter Datentransport\\
     3& Vermittlungsschicht/ network layer& Wegewahl und Flusskontrolle\\
     2& Sicherungsschicht/ data link layer& Auf- bzw. Abbau einzelner
-       "Ubertragungsabschnitte, Fehlererkennung/-korrektur\\
-    1& Bit"ubertragungsschicht/ physical layer& mechanische, elektrische
-       und funktionelle Steuerung der "Ubertragung
+       Übertragungsabschnitte, Fehlererkennung/-korrektur\\
+    1& Bitübertragungsschicht/ physical layer& mechanische, elektrische
+       und funktionelle Steuerung der Übertragung
   \end{tabular}
   5--7 nennt man die anwendungsorientierten Schichten, 1--4 nennt man die
   transportorientierten Schichten
   
   \begin{enumerate}
    \item Jede Schicht realisiert einen oder mehrere Dienste mithilfe von
-    Prozessen (Instanzen o.~"a.)
-   \item Zur Erbringung eines Dienstes k"onnen Instanzen \emph{einer}
+    Prozessen (Instanzen o.\,ä.)
+   \item Zur Erbringung eines Dienstes können Instanzen \emph{einer}
     Schicht miteinander kooperieren oder kommunizieren.
    \item Die Kooperation erfolgt mithilfe von Schichtprotokollen.
    \item Instanzen greifen auf Dienste der \emph{direket} darunterliegenen
-    Schicht zur"uck.
+    Schicht zurück.
   \end{enumerate}
   
-  "Uber die Schnittstelle zwischen $n$-ter und $(n-1)$-ter~Schicht werden
+  Über die Schnittstelle zwischen $n$-ter und $(n-1)$-ter~Schicht werden
   folgende Informationen ausgetauscht:
   \begin{itemize}
    \item Benutzerdaten der $(n+1)$-ten~Schicht
    \item Kontrollinformationen zwischen den $n$~Instanzen
-   \item Steuer- und Kontrollinformationen f"ur die $(n-1)$-te~Schicht
+   \item Steuer- und Kontrollinformationen für die $(n-1)$-te~Schicht
     zur Erbringung bestimmter Dienste.
   \end{itemize}
 \end{bsp}
@@ -489,7 +530,7 @@ des Systems nachweisen oder die Fehler erkennen.
 Grundbegriffe:
 \begin{description}
  \item[Objekt] ist eine Gegenstand, der agiert oder mit seiner Umgebung
-  interagiert. Dies kann z.~B. ein Rechner oder ein Programm sein.
+  interagiert. Dies kann z.\,B. ein Rechner oder ein Programm sein.
  \item[Prozeß] ist ein Modell zur Verhaltensbeschreibung eines Objekts.
   In einem Prozess läuft eine Folge von Ereignissen ab.
  \item[Ereignis] ist die zeitlose Veränderung des Verhaltens eines oder
@@ -624,7 +665,7 @@ Regeln:
      \item $(c\rightarrow P) \parallel (c\rightarrow Q) = c\rightarrow
       P\parallel Q$
      \item $(c\rightarrow P) \parallel (d\rightarrow Q) = STOP\quad
-      (c\not= d)$
+      (c\neq d)$
     \end{enumerate}
    \item[Concurency]\mbox{}\\
     Regeln: $a\in (\alpha P\setminus \alpha Q), b\in (\alpha Q\setminus
@@ -940,13 +981,13 @@ Kommunikation mit mehreren Partnern im Netz
  \item[Empfänger] Nachricht (Daten + Steuerinformationen + CRC) wird
   ebenfalls durch das Prüfpolynom dividiert
   
-  \begin{equation*}
+  \begin{gather*}
     \text{Ergebnis}
     \begin{cases}
       = 0&: \text{korrekte Übertragung}\\
-      \not= 0 &:\text{fehlerhafte Übertragung}
+      \neq 0 &:\text{fehlerhafte Übertragung}
     \end{cases}
-  \end{equation*}
+  \end{gather*}
 \end{description}
 
 \subsubsection{HDLC (Ebene 2)}
@@ -1251,7 +1292,7 @@ Probleme: "`Store and forward lockup"' und "`Reassembly lockup"'
 inXY: Daten, die an Rechner X eingegeben werden und an Y gehen sollen.
 Diese werden im Transferspeicher abgelegt
 
-transXY: Daten, die von Rechner X kommen und zu Rechner Y. Y$\not=$
+transXY: Daten, die von Rechner X kommen und zu Rechner Y. Y$\neq$
 eigener Rechnernache $\rightarrow$ Paket in Transferspeicher (beschränkte
 Größe), andernfalls in den lokalen Speicher (unendlich groß)
 
@@ -1357,10 +1398,10 @@ $P_{i} = \sigma^{i} P_{0}$ Wahrscheinlichkeit, dass $i$ Aufträge in dem System s
 
 \subsection{Wiegroß ist $P_{0}$?}
 
-\begin{equation*}
+\begin{gather*}
   1 = \sum_{i=0}^{\infty} P_{i} = \sum_{i=0}^{\infty} \sigma^{i} P_{0} =
   P_{0} \sum_{i=0}^{\infty} \sigma^{i} = \frac{P_{0}}{1-\sigma}
-\end{equation*}
+\end{gather*}
 $\Longrightarrow$ $P_{0} = 1-\sigma$ $\Longrightarrow$ $\sigma$ sollte
 sehr nahe bei 1 liegen.
 
@@ -1368,16 +1409,16 @@ sehr nahe bei 1 liegen.
 
 $P_{k}$ ($>k$ Warteplätze sind erforderlich)
 
-\begin{equation*}
+\begin{gather*}
   P_{r} = \sum_{i=k+1}^{\infty} P_{i} = \sum_{i=k+1}^{\infty} \sigma^{i}
   P_{0} = \sum_{i=k+1}^{\infty} \sigma^{i} (1-\sigma) = (1-\sigma)
   \big(\sum_{i=0}^{\infty} \sigma^{i} - \sum_{i=0}^{k} \sigma^{i} \big)
   !! = \sigma^{k+1} (1-\sigma) \sum_{i=0}^{\infty} \sigma^{i} = \sigma^{k+1}
-\end{equation*}
+\end{gather*}
 
 \subsection{Berechnung der mittleren Warteschlangenlänge $\overline{Q}$}
 
-\begin{equation*}
+\begin{gather*}
   \overline{Q} = \sum_{i=0}^{\infty} iP_{i} = \sum_{i=0}^{\infty} i
   \sigma^{i} (1-\sigma) = (1-\sigma) \sum_{i=1}^{\infty} i\sigma^{i} =
   \sigma (1-\sigma) \sum_{i=1}^{\infty} i\sigma^{i+1} = \sigma (1-\sigma)
@@ -1385,7 +1426,7 @@ $P_{k}$ ($>k$ Warteplätze sind erforderlich)
   \sigma (1-\sigma) \frac{\partial \sum_{i=1}^{\infty}
   \sigma^{i}}{\partial \sigma} = \sigma (1-\sigma) \frac{\partial
   \frac{\sigma}{1-\sigma}}{\partial \sigma} = \frac{\sigma}{1-\sigma}
-\end{equation*}
+\end{gather*}
 
 \subsection{Berechnung der effektiven Übertragungszeit}
 
